--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <!-- Professional Photo - Right Side -->
                 <div class="flex justify-center lg:justify-end">
-                    <img src="shanmugam-photo.jpg" alt="Shanmugam V - Professional Legal Advocate" class="w-64 h-64 lg:w-80 lg:h-80 rounded-full border-6 border-blue-400 professional-shadow object-cover" style="object-position: center 25%;">
+                    <img src="C:\Users\niran\Downloads\appa pic 1.jpg" alt="Shanmugam V - Professional Legal Advocate" class="w-64 h-64 lg:w-80 lg:h-80 rounded-full border-6 border-blue-400 professional-shadow object-cover" style="object-position: center 25%;">
                 </div>
             </div>
         </div>
